# grab-onboarding

./: README.md
charts/base/: config-dev.yaml  config-prod.yaml  dev-service.yaml  fastapi-server.yaml  next-client.yaml  virtual-pv.yaml  virtual-pvc.yaml
charts/helm/socar-de-onboarding-client/: Chart.yaml  values.yaml
charts/helm/socar-de-onboarding-client/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
charts/helm/socar-de-onboarding-client/templates/tests/: test-connection.yaml
charts/helm/socar-de-onboarding-server/: Chart.yaml  values.yaml
charts/helm/socar-de-onboarding-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
fastapi-server/: .gitignore  Dockerfile  cars.json  main.py  pyproject.toml
fastapi-server/tests/: test_fastapi_server.py
next-client/: Dockerfile
next-client/pages/: index.js
