[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["socar-grab <grab@socar.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pre-commit = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
